Fix text alignment on global header and responsive view in contact form.

--- a/lms/static/sass/_pearsonx.scss
+++ b/lms/static/sass/_pearsonx.scss
@@ -6,6 +6,10 @@ h2 {
   background-color: $white;
 }
 
+.global_header .nav-links .main .nav-item a {
+  vertical-align: -4px;
+}
+
 .header-global {
   height: auto;
 }
@@ -219,7 +223,7 @@ h2 {
       }
     }
     .contact-form-container {
-      flex-basis: 40%;
+      flex-basis: auto;
       margin-left: $baseline;
       .hidden-form-fields {
         display: none;
@@ -512,21 +516,6 @@ section.course-info {
 
 #contacted-message {
   display: none;
-}
-
-// this @media rule can be deleted after https://github.com/edx/edx-platform/pull/16640/ is merged
-@media screen and (max-width: 760px) {
-  .course-info {
-    header.course-profile {
-      .intro-inner-wrapper {
-        min-width: auto;
-      }
-    }
-    .container {
-      min-width: auto;
-      padding: 20px;
-    }
-  }
 }
 
 /*
